--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">io</span></a></h1>
+			<h1><a href="/"><span id="nvie">saifulindo</span><span id="dot">.</span><span id="ext">blog</span></a></h1>
 			<ul>
                 <li id="home"  class='current'><span class="active" title="You're here.">Home</span></li>
                 <li id="posts" ><a href="/posts/">Posts</a></li>
