--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
 
 <p>Blog ini ditulis oleh M. Saiful Mukharom, biasa dipanggil saiful, lebih suka dengan nama muhammad syaiful. 
 	Sedangkan nama kun-yah Abu Assyajaroh Muhammad Syaiful bin Saelan bin Todinomo bin Tjokrodikromo Al-Fatiy.</p>
-<p><img src="/img/saifulindo.jpg" class="center thin-bordered" alt=""/></p>
+<p><img src="/img/saifulindo.png" class="center thin-bordered" alt=""/></p>
 <p>Pernah menjadi teknisi di Asnet Multimeda sekitar tiga sampai empat tahun, kemudian menjadi pengajar bidang teknologi informasi sejak agustus 2013 sampai sekarang.</p>
 <h2>Akademi</h2>
 <p>Sedang menempuh S1 di Universitas Nusantara PGRI Kediri, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
