Edit Post and aboute

--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 <h2>Minat</h2>
 <p>Computer Science, Mathematics, networking, Automotif, and Electronics.</p>
 <h2>Contact</h2>
-<p>Twitrer <a herf="https://twitter.com/saifulindo">@saifulindo</a>, bisa juga melalui e-mail di ritnesaif@gmail.com, untuk murid saya melalui e-mail di saifulindo@guruku.my.id.</p>
+<p>Twitrer <a href="http://twitter.com/saifulindo">@saifulindo</a>, bisa juga melalui e-mail di ritnesaif@gmail.com, untuk murid saya melalui e-mail di saifulindo@guruku.my.id.</p>
 </div>
 
 		</div>
