add tabulasi salaf

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<ul>
                 <li id="home"  class='current'><span class="active" title="You're here.">Home</span></li>
                 <li id="posts" ><a href="/posts/">Posts</a></li>
-                
+                <li id="home" ><a href="/Salaf/">Salaf</a></li>
                 <li id="about" ><a href="/about/">About me</a></li>
 			</ul>
         </div>
