--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 			</ul>
         </div>
 		<div id="actionbox" style="display: none">
-			<div id="rss"><img src="/img/rss.png" alt="Subscribe" title="Subscribe" width="16" height="16" /></a></div>
+			<div id="github"><a href="https://github.com/saifulindo"><img src="/img/blacktocat.png" alt="GitHub" title="saifulindo on github" width="16" height="16" /></a></div>
 			<div id="tweet"><a href="http://twitter.com/saifulindo"><img src='/img/twitter.png' width="16" height="16" alt="Tweet this!" title="Tweet this!" /></a></div>
 
 			
@@ -56,7 +56,7 @@
 <h2>Akademi</h2>
 <p>Sedang menempuh S1 di Universitas Nusantara PGRI Kediri, Program Studi Teknik Informatika. Pengalaman selama menjadi mahasiswa pernah menjadi anggota HIMADITI, LPM Muara, BEM FT, UKM PPN dan Mendirikan <a href="http://cah.unpkediri.ac.id">Komunitas CAH UNP</a>.</p>
 <h2>Minat</h2>
-<p>Computer Science, Mathematics, networking, Automotif, and Electronics.</p>
+<p>Computer Science, Mathematics, Networking, Automotif, and Electronics.</p>
 <h2>Contact</h2>
 <p>Twitrer <a href="http://twitter.com/saifulindo">@saifulindo</a>, bisa juga melalui e-mail di ritnesaif@gmail.com, untuk murid saya melalui e-mail di saifulindo@guruku.my.id.</p>
 </div>
