--- a/about/index.html
+++ b/about/index.html
@@ -63,8 +63,8 @@
 
 		</div>
 		<div id="footer">
-            <p>M. Saiful Mukharom is a Teacher at SMK TI Pelita Nusantara Kediri
-            
+            <p>Muhammad Syaiful&#8217;s a teacher and active in the community, interested in the 
+            	programming language of Ruby, Phython, and C ++.            
 
             </p>
 		</div>
