--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@
 		</div>
 		<div id="footer">
             <p>Muhammad Syaiful&#8217;s a teacher and active in the community, interested in the 
-            	programming language of Ruby, Phython, and C ++.            
+            	programming language of Ruby, Phyton, and C ++.            
 
             </p>
 		</div>
