word in salaf adab ilmu

--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -61,7 +61,7 @@
 <p>Al-Imam Malik rahimahullah mengatakan kepada salah seorang pemuda Quraisy :</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >يَا اِبْنَ أَحِيْ، تَعَلَّمْ الاَّدَبَ قَبْلَ أَنْ تَتَعَلَمَ الْعِلْمَ.</div>
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >يَا اِبْنَ أَحِيْ، تَعَلَّمْ الاَّدَبَ قَبْلَ أَنْ تَتَعَلَمَ الْعِلْمَ</div>
 	“Wahai anak saudaraku, belajarlah tentang adab sebelum engkau belajar ilmu.”[1]
 </p>
 </blockquote>
@@ -69,15 +69,15 @@
 <p>Ibnu Wahb rahimahullah mengtakan:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >مَا نَقَلْنَا مِنْ أَدَبِ مَلِكِ أَ كْثَرُ مِمَّا تَعَلَّمْنَا مِنْ عِلْمِهِ.</div>
-	“Apa yang kami peroleh dari al-Imam Malik berupa dab, itu lebih banyak dari apa yang kami peroleh berupa ilmu.”[2]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >مَا نَقَلْنَا مِنْ أَدَبِ مَلِكِ أَ كْثَرُ مِمَّا تَعَلَّمْنَا مِنْ عِلْمِهِ</div>
+	“Apa yang kami peroleh dari al-Imam Malik berupa adab, itu lebih banyak dari apa yang kami peroleh berupa ilmu.”[2]
 </p>
 </blockquote>
 <h3>ketiga</h3>
 <p>AL-Khatib al-Bagdadi rahimahullah meriwayatkan dari Malik ibn Annas, bahwa Ibnu Sirin pernah mengatakan :</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >كَا نُوْا يَتَعَلَمُوْنَ الْهَدْيَ كَمَا يَتَعَلَّمُوْنَ الْعِلْمَ.</div>
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >كَا نُوْا يَتَعَلَمُوْنَ الْهَدْيَ كَمَا يَتَعَلَّمُوْنَ الْعِلْمَ</div>
 	“Mereka (para salaf) mempelajari tentang adab sebagaimana mereka mempelajari tentang ilmu”[3]
 </p>
 </blockquote>
@@ -85,8 +85,8 @@
 <p>Malik ibnu Anas rahimahullah menceritkan bahwa ibunya dahulu mengtakan kepadanya:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >اِذْهَبْ إِلَى رَبِيْعَةَ، فَتَعَلَمْ مِنْ أَدَبِهِ قَبْلَ عِلْمِهِ.</div>
-	“Pergilah kamu kepada Rabi’ah, dan pelajari tentang adabnya sebelum mempelajari ilmunya.”[4]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >اِذْهَبْ إِلَى رَبِيْعَةَ، فَتَعَلَمْ مِنْ أَدَبِهِ قَبْلَ عِلْمِهِ</div>
+	“Pergilah kamu kepada Rabi&#8217;ah, dan pelajari tentang adabnya sebelum mempelajari ilmunya.”[4]
 </p>
 </blockquote>
 <h3>kelima</h3>
@@ -108,16 +108,16 @@
 
 <h3>Bibliography</h3>
 <p>
-[1] Hilyatul Auliya&#8217; 6/330, oleh Abu Nu’am <br>
-[2] Siyar A&#8217;lam an-Nubala&#8217; 8/113, oleh adz-Dzahabi <br>
-[3] al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217; 1/79, oleh al-Khathib al-Baghdadi <br>
-[4] Tanwirul Hawalik Syarh al-Muwathth&#8217; lil Imam Malik hlm. 164, oleh as-Suyuthi <br>
-[5] al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217; 1/79, oleh al-Khathib al-Baghdadi <br>
-[3] al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217; 1/80, oleh al-Khathib al-Baghdadi <br>
+[1] <i>Hilyatul Auliya&#8217;</i> 6/330, oleh Abu Nu’am <br>
+[2] <i>Siyar A&#8217;lam an-Nubala&#8217;</i> 8/113, oleh adz-Dzahabi <br>
+[3] <i>al-Jami&#8217;</i> li Akhlaqir Rawi wa Adabis Sami&#8217; 1/79, oleh al-Khathib al-Baghdadi <br>
+[4] <i>Tanwirul Hawalik Syarh al-Muwathth&#8217;</i> lil Imam Malik hlm. 164, oleh as-Suyuthi <br>
+[5] <i>al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217;</i> 1/79, oleh al-Khathib al-Baghdadi <br>
+[3] <i>al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217;</i> 1/80, oleh al-Khathib al-Baghdadi <br>
 </p>
 <h3>Catatan Penulis</h3>
-<p>Saya menyalin tidak seluruhnya, dalam majalah perkataan para salaf disebutkan sebanyak sebelas akan tetapi dalam blog ini saya tulis hanya menyebutkan enam saja, untuk lebih lengkapnya bias merujuk ke sumber tulisan, semoga bermanfaat dan menambah semangat kita dalam beramal.</p>
-<p>“pelajarilah dasarnya ilmu, atau engkau tidak akan pernah bias menguasai ilmu tersebut dengan luas [perkataan ulama]”</p>
+<p>Saya menyalin tidak seluruhnya, dalam majalah perkataan para salaf disebutkan sebanyak sebelas akan tetapi dalam blog ini saya tulis hanya menyebutkan enam saja, untuk lebih lengkapnya bisa merujuk ke sumber tulisan, semoga bermanfaat dan menambah semangat kita dalam beramal.</p>
+<p>“pelajarilah dasarnya ilmu, atau engkau tidak akan pernah bisa menguasai ilmu tersebut dengan luas [perkataan ulama]”</p>
 
 <h3>Sumber :</h3>
 <p>Majalah Al-Furqon Edisi 4 tahun ke-14/151 hlm. 62-63, oleh Al-Ustadz Abu Faiz rahimahullah.</p>
