word in salaf adab ilmu-nd

--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -61,48 +61,48 @@
 <p>Al-Imam Malik rahimahullah mengatakan kepada salah seorang pemuda Quraisy :</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >يَا اِبْنَ أَحِيْ، تَعَلَّمْ الاَّدَبَ قَبْلَ أَنْ تَتَعَلَمَ الْعِلْمَ</div>
-	“Wahai anak saudaraku, belajarlah tentang adab sebelum engkau belajar ilmu.”[1]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >يَا اِبْنَ أَحِيْ، تَعَلَّمْ الاَّدَبَ قَبْلَ أَنْ تَتَعَلَمَ الْعِلْمَ</div></p>
+	<p>“Wahai anak saudaraku, belajarlah tentang adab sebelum engkau belajar ilmu.”[1]
 </p>
 </blockquote>
 <h3>kedua</h3>
 <p>Ibnu Wahb rahimahullah mengtakan:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >مَا نَقَلْنَا مِنْ أَدَبِ مَلِكِ أَ كْثَرُ مِمَّا تَعَلَّمْنَا مِنْ عِلْمِهِ</div>
-	“Apa yang kami peroleh dari al-Imam Malik berupa adab, itu lebih banyak dari apa yang kami peroleh berupa ilmu.”[2]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >مَا نَقَلْنَا مِنْ أَدَبِ مَلِكِ أَ كْثَرُ مِمَّا تَعَلَّمْنَا مِنْ عِلْمِهِ</div></p>
+	<p>“Apa yang kami peroleh dari al-Imam Malik berupa adab, itu lebih banyak dari apa yang kami peroleh berupa ilmu.”[2]
 </p>
 </blockquote>
 <h3>ketiga</h3>
 <p>AL-Khatib al-Bagdadi rahimahullah meriwayatkan dari Malik ibn Annas, bahwa Ibnu Sirin pernah mengatakan :</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >كَا نُوْا يَتَعَلَمُوْنَ الْهَدْيَ كَمَا يَتَعَلَّمُوْنَ الْعِلْمَ</div>
-	“Mereka (para salaf) mempelajari tentang adab sebagaimana mereka mempelajari tentang ilmu”[3]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >كَا نُوْا يَتَعَلَمُوْنَ الْهَدْيَ كَمَا يَتَعَلَّمُوْنَ الْعِلْمَ</div></p>
+	<p>“Mereka (para salaf) mempelajari tentang adab sebagaimana mereka mempelajari tentang ilmu”[3]
 </p>
 </blockquote>
 <h3>keempat</h3>
 <p>Malik ibnu Anas rahimahullah menceritkan bahwa ibunya dahulu mengtakan kepadanya:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >اِذْهَبْ إِلَى رَبِيْعَةَ، فَتَعَلَمْ مِنْ أَدَبِهِ قَبْلَ عِلْمِهِ</div>
-	“Pergilah kamu kepada Rabi&#8217;ah, dan pelajari tentang adabnya sebelum mempelajari ilmunya.”[4]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >اِذْهَبْ إِلَى رَبِيْعَةَ، فَتَعَلَمْ مِنْ أَدَبِهِ قَبْلَ عِلْمِهِ</div></p>
+	<p>“Pergilah kamu kepada Rabi&#8217;ah, dan pelajari tentang adabnya sebelum mempelajari ilmunya.”[4]
 </p>
 </blockquote>
 <h3>kelima</h3>
 <p>Abu Abdillah  al-Balkhi rahimahullah mengatakan:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >أَدَبُ الْعِلَمِ أَكْثَرُ مِنَ الْعِلْمِ</div>
-	“Adab-adabnya ilmu itu lebih banyak daripada ilmu itu sendiri”[5]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >أَدَبُ الْعِلَمِ أَكْثَرُ مِنَ الْعِلْمِ</div></p>
+	<p>“Adab-adabnya ilmu itu lebih banyak daripada ilmu itu sendiri”[5]
 </p>
 </blockquote>
 <h3>keenam</h3>
 <p>Ibnul Mubarak rahimahullah mengatakan bahwa Mukhallid ibn al-husain telah berkata kepadaku:</p>
 <blockquote>
 <p>
-	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >أنَحْنُ إِلَى كَثِيْرٍ مِنَ الْأَ دَبِ أَحْوَجُ مِنَّا إِلَى كَثِيْرٍمِنَ الْحَدِيْثِ</div>
-	“Kami mendalami seputar adab itu lebih kami butuhkan daripada sekadar banyak menghafal hadits.”[6]
+	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;" >أنَحْنُ إِلَى كَثِيْرٍ مِنَ الْأَ دَبِ أَحْوَجُ مِنَّا إِلَى كَثِيْرٍمِنَ الْحَدِيْثِ</div></p>
+	<p>“Kami mendalami seputar adab itu lebih kami butuhkan daripada sekadar banyak menghafal hadits.”[6]
 </p>
 </blockquote>
 
@@ -110,7 +110,7 @@
 <p>
 [1] <i>Hilyatul Auliya&#8217;</i> 6/330, oleh Abu Nu’am <br>
 [2] <i>Siyar A&#8217;lam an-Nubala&#8217;</i> 8/113, oleh adz-Dzahabi <br>
-[3] <i>al-Jami&#8217;</i> li Akhlaqir Rawi wa Adabis Sami&#8217; 1/79, oleh al-Khathib al-Baghdadi <br>
+[3] <i>al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217;</i> 1/79, oleh al-Khathib al-Baghdadi <br>
 [4] <i>Tanwirul Hawalik Syarh al-Muwathth&#8217;</i> lil Imam Malik hlm. 164, oleh as-Suyuthi <br>
 [5] <i>al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217;</i> 1/79, oleh al-Khathib al-Baghdadi <br>
 [3] <i>al-Jami&#8217; li Akhlaqir Rawi wa Adabis Sami&#8217;</i> 1/80, oleh al-Khathib al-Baghdadi <br>
