gelas ust. faiz /salaf

--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
@@ -120,7 +120,7 @@
 <p>“pelajarilah dasarnya ilmu, atau engkau tidak akan pernah bisa menguasai ilmu tersebut dengan luas [perkataan ulama]”</p>
 
 <h3>Sumber :</h3>
-<p>Majalah Al-Furqon Edisi 4 tahun ke-14/151 hlm. 62-63, oleh Al-Ustadz Abu Faiz rahimahullah.</p>
+<p>Majalah Al-Furqon Edisi 4 tahun ke-14/151 hlm. 62-63, oleh Al-Ustadz Abu Faiz hafidzahullah.</p>
 
 </div>
 
