--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
 
 <h1>About me</h1>
 
-<p>Blog ini ditulis oleh M. Saiful Mukharom, biasa dipanggil saiful, lebih suka dengan nama muhammad syaiful. 
+<p>Blog ini ditulis oleh M. Saiful Mukharom, biasa dipanggil Saiful, lebih suka dengan nama Muhammad Syaiful. 
 	Sedangkan nama kun-yah Abu Assyajaroh Muhammad Syaiful bin Saelan bin Todinomo bin Tjokrodikromo Al-Fatiy.</p>
 <p><img src="/img/saifulindo.png" class="center thin-bordered" alt=""/></p>
 <p>Pernah menjadi teknisi di Asnet Multimeda sekitar tiga sampai empat tahun, kemudian menjadi pengajar bidang teknologi informasi sejak agustus 2013 sampai sekarang.</p>
@@ -58,7 +58,7 @@
 <h2>Minat</h2>
 <p>Computer Science, Mathematics, Networking, Automotif, and Electronics.</p>
 <h2>Contact</h2>
-<p>Twitrer <a href="http://twitter.com/saifulindo">@saifulindo</a>, bisa juga melalui e-mail di ritnesaif@gmail.com, untuk murid saya melalui e-mail di saifulindo@guruku.my.id.</p>
+<p>Twitter <a href="http://twitter.com/saifulindo">@saifulindo</a>, bisa juga melalui e-mail di ritnesaif@gmail.com, untuk murid saya melalui e-mail di saifulindo@guruku.my.id.</p>
 </div>
 
 		</div>
