--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -127,7 +127,7 @@
 		</div>
 		<div id="footer">
             <p>Muhammad Syaiful&#8217;s a teacher and active in the community, interested in the 
-            	programming language of Ruby, Phyton, and C ++.            
+            	programming language of Ruby, Python, and C++.            
 
             </p>
 		</div>
