post about client bridge

--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -33,7 +33,7 @@
 			<ul>
                 <li id="home" ><a href="/">Home</a></li>
                 <li id="posts" ><a href="/posts/">Posts</a></li>
-                <li id="posts" ><a href="/salaf/">Salaf</a></li>
+                <li id="posts" class='curent'><a href="/salaf/">Salaf</a></li>
                 <li id="about" ><a href="/about/">About me</a></li>
 			</ul>
         </div>
@@ -45,7 +45,7 @@
 
 		</div>
 		<div id="main">
-			<div id="item">
+			<div id="post">
 
 <h1>Antara Adab dan ilmu</h1>
 
