update /tugas/kisi-kisi-uts and fixed word

--- a/tugas/tugas-konfigurasi-matheboard/index.html
+++ b/tugas/tugas-konfigurasi-matheboard/index.html
@@ -33,7 +33,7 @@
 			<ul>
                 <li id="home" ><a href="/">Home</a></li>
                 <li id="home" ><a href="/posts/">Posts</a></li>
-                <li id="posts" class='curent'><a href="/tugas/">tugas</a></li>
+                <li id="posts" class='curent'><a href="/tugas/">Tugas</a></li>
                 <li id="about" ><a href="/about/">About me</a></li>
 			</ul>
         </div>
@@ -47,13 +47,13 @@
 		<div id="main">
 			<div id="post">
 
-<h1>Tugas Konfigurasi Matheboard</h1>
+<h1>Tugas Konfigurasi Motherboard</h1>
 <p id="permalink" class="print-only">http://saifulindo.github.io/tugas/tugas-konfigurasi-matheboard/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Oct 05, 2014</span></p><p class="print-only created_at dateline">Published: <span>Oct 05, 2014</span></p>
 
 <h3>Petunjuk</h3>
 <ul>
-  <li>Sumber Bacaan file .pptx Tata Letak <code>Komputer.pptx</code> dan Buku <code>1-C2-Perakitan Komputer-X-1.pdf</code></li>
+  <li>Sumber Bacaan file .pptx <code>Tata Letak Komputer.pptx</code> dan Buku <code>1-C2-Perakitan Komputer-X-1.pdf</code></li>
   <li>Tugas Kelompok, dengan jumlah anggota empat – enam anak.</li>
   <li>Setiap Kelompok memilih salah satu soal untuk dikerjakan dan antar kelompok tidak boleh mengerjakan soal yang sama.</li>
   <li>Buat laporan dari tugas kalian kemudian dikumpulkan dalam format Power Point.</li>
@@ -61,7 +61,7 @@
 </ul>
 <h3>Soal Uraian</h3>
 <ul>
-  <li>Sebutkan dan jelaskan kegunaan jumper pada matheboard ....</li>
+  <li>Sebutkan dan jelaskan kegunaan jumper pada motherboard ....</li>
   <li>Jelaskan kegunaan jumper master, slave, dan cable selected pada gambar di bawah ini :</li><br>
   <p style="text-align:center;"><img src="/img/2014/10/jumper_device.jpg" alt="Jumper Device"></p>
   <li>Jelaskan fungsi Front Panel dan kegunaan Power SW, Reset SW, HDD LED, Power LED .....</li><br>
