updated guide uts comunication data

--- a/salaf/antara-adab-dan-ilmu/index.html
+++ b/salaf/antara-adab-dan-ilmu/index.html
@@ -52,7 +52,7 @@
 <p id="permalink" class="print-only">http://saifulindo.github.io/salaf/antara-adab-dan-ilmu/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Sept 05, 2014</span></p><p class="print-only created_at dateline">Published: <span>Sept 05, 2014</span></p>
 
-<p>Prinsip para salaf adalah “mereka mempelajari tentang adab, sopan santun dan tata karma, sebelum/sebagaimana mereka mempelajari ilmu”. Mereka sangat mendorong para muridnya untuk mengetahui adab sebelum mengerjakan ilmu. Adab-adab tersebut meliputi adab kepada dirinya sendiri, keluarganya, kepada gurunya, teman-teman, dan sahabatnya serta adab kepada semua manusia.</p>
+<p>Prinsip para salaf adalah “mereka mempelajari tentang adab, sopan santun dan tata krama, sebelum/sebagaimana mereka mempelajari ilmu”. Mereka sangat mendorong para muridnya untuk mengetahui adab sebelum mengerjakan ilmu. Adab-adab tersebut meliputi adab kepada dirinya sendiri, keluarganya, kepada gurunya, teman-teman, dan sahabatnya serta adab kepada semua manusia.</p>
 
 
 <p>Seorang penuntut ilmu wajib memiliki adab kesopanan, yang tercermin dalam perilakunya bersama gurunya, dan bersama sahabat-sahabatnya. Pendidikan adab kepada seorang penuntut ilmu sebelum pendidikan ilmu adalah perkara yang sangat mendasar dan penting. Berikut perkatan para imam salaf yang begitu banyak menghasung akan perkara tersebut.</p>
