--- a/tugas/kisi-kisi-uts/index.html
+++ b/tugas/kisi-kisi-uts/index.html
@@ -69,6 +69,14 @@
   <li>Perangkat proses dan media penyimpanan.</li>
   <li>Konfigurasi matherboard dan nama – nama komponen motherboard.</li>
 </ul>
+<h3>Komunikasi Data</h3>
+<ul>
+  <li>Secara umum pelajari file <code>.pptx</code> yang telah diberikan</li>
+  <li>Pelajari tentang code ASCII, UNICODE, EBSDIC, UTP-8.</li>
+  <li>Layer OSI.</li>
+  <li>Standart Komunikasi.</li>
+  <li>Pelajari VoIP seperti Sofswitch, Softphone, Hardphone dan semisalnya.</li>
+</ul>
 
 <p>Baiklah anak-anaku, semakin kalian butuh akan ilmu maka Allah akan memberikan kemudahan kepada kalian dalam memahami ilmu tersebut.</p>
 
