updated Kisi-kisi KWAN

--- a/tugas/kisi-kisi-uts/index.html
+++ b/tugas/kisi-kisi-uts/index.html
@@ -77,7 +77,14 @@
   <li>Standart Komunikasi.</li>
   <li>Pelajari VoIP seperti Sofswitch, Softphone, Hardphone dan semisalnya.</li>
 </ul>
-
+<h3>Konfigurasi Wide Area Network</h3>
+<ul>
+  <li>Secara umum soal diambil dari materi yang telah disampaikan dikelas, serta pelajari file <code>.pptx</code> yang telah diberikan.</li>
+  <li>Pelajari tentang <i>subneting</i> pada materi <a href="/post/client-bridge-on-engenius/">ClientBridge on Engenius</a></li>
+  <li>Perintah dasar <i>linux</i>, seperti konfigurasi <i>networking</i> dan yang lainnya</li>
+  <li>Konfigurasi <i>hyperterminal</i> dan perintah pada <i>router Cisco</i></li>
+  <li>Pelajari tentang mengidentifikasi fungsionalitas jaringan pada perangkat yang terhubung WAN, Membahas tentang enganalisa <i>DHCP Client</i>.</li>
+</ul>
 <p>Baiklah anak-anaku, semakin kalian butuh akan ilmu maka Allah akan memberikan kemudahan kepada kalian dalam memahami ilmu tersebut.</p>
 
 <p>Jika kalian ingin bertanya, saya <a
