fixed index on kisi-kisi-uts/ EBCDIC

--- a/tugas/kisi-kisi-uts/index.html
+++ b/tugas/kisi-kisi-uts/index.html
@@ -72,7 +72,7 @@
 <h3>Komunikasi Data</h3>
 <ul>
   <li>Secara umum pelajari file <code>.pptx</code> yang telah diberikan</li>
-  <li>Pelajari tentang code ASCII, UNICODE, EBSDIC, UTP-8.</li>
+  <li>Pelajari tentang code ASCII, UNICODE, EBCDIC, UTF-8.</li>
   <li>Layer OSI.</li>
   <li>Standart Komunikasi.</li>
   <li>Pelajari VoIP seperti Sofswitch, Softphone, Hardphone dan semisalnya.</li>
