fixed curent posted

--- a/salaf/agar-terhindar-dari-jeleknya-akhlak/index.html
+++ b/salaf/agar-terhindar-dari-jeleknya-akhlak/index.html
@@ -47,23 +47,23 @@
 		<div id="main">
 			<div id="post">
 
-<h1>Agar terhindar dari jeleknya akhlak</h1>
+<h2>Agar terhindar dari jeleknya akhlak</h2>
 
 <p id="permalink" class="print-only">http://saifulindo.github.io/salaf/agar-terhindar-dari-jeleknya-akhlak/</p>
 <p class="no-print created_at dateline">Published: <span class="reldate">Oct 11, 2014</span></p><p class="print-only created_at dateline">Published: <span>Oct 11, 2014</span></p>
 <blockquote>
 <p>
 	<div style="font-family:'traditional arabic'; font-size: 23px; text-align: right;"> اَللَّهُمَّ جَنِّبْنِي مُنْكَرَاتِ الْأَخْلاَقِ وَالْأَعْمَالِ وَالْأَهْوَاءِوَالْأَدْوَاءِ </div> </p>
-	<p>““Ya Allah Jauhkanlah aku dari jeleknya akhlak, perbuatan hawa nafsu dan berbagai macam penyakit.” (HR. Ibnu Hibban:960, at-Tirmidzi: 3591, dan al-Hakim:1949)”[1]
+	<p>“Ya Allah Jauhkanlah aku dari jeleknya akhlak, perbuatan hawa nafsu dan berbagai macam penyakit.” (HR. Ibnu Hibban:960, at-Tirmidzi: 3591, dan al-Hakim:1949)”[1]
 </p>
 </blockquote>
 <h3>Makna Kalimat :</h3>[2]
-<ul type="1">
-	<li style="font-family:'traditional arabic';">Kata mungkar (الْمُنْكَرُ) apa saja yang tidak diketahui baiknya oleh agama atau semua yang diketahui buruknya oleh agama.</li>
-	<li style="font-family:'traditional arabic';">Sabda beliauمُنْكَرَاتِ الْأَخْلاَقِ  maksudny, adalah akhlak yang tercela, baik menurut syariat maupun akal sehat manusia seperti : iri, dengki, menipu, bakhil, pengecut, sombong, keras hati, dan sebagainya.</li>
-	<li style="font-family:'traditional arabic';">Adapun makna مُنْكَرَاتِ الْأَعْمَلِ adalah segala perbuatan yang diingkari, baik oleh syariat mapun adat, meliputi dosa – dosa besar semisal membunuh, mencuri, berzina, minum – minuman keras dan lain – lain, atau terus menrus melakukan dosa kecil.</li>
-	<li style="font-family:'traditional arabic';">Maksud sabda beliau مُنْكَرَاتِ الْأَهْوَاءِ adalah syahwat yang membinasakan dan menghancurkan berupa melakukan berbagai kmekasiatan atau lebih mengutmakan perbuatan dosa dan kemaksiatan.</li>
-	<li style="font-family:'traditional arabic';">Adapun yang dimaksudمُنْكَرَات الْأَدْوَاءِ  adalah berbagai macam penyakit, baik yang bersarang di badan manusia seperti lepra, kusta, belang, TBC, dan sebagainya. Atau penyakit yang bersarang di dalam hati manusia berupa syahwat (perbuatan maksiat) atau syubhat seperti perbuatan bid’ah.</li>
+<ul>
+	<li>Kata mungkar (الْمُنْكَرُ) apa saja yang tidak diketahui baiknya oleh agama atau semua yang diketahui buruknya oleh agama.</li>
+	<li>Sabda beliauمُنْكَرَاتِ الْأَخْلاَقِ  maksudny, adalah akhlak yang tercela, baik menurut syariat maupun akal sehat manusia seperti : iri, dengki, menipu, bakhil, pengecut, sombong, keras hati, dan sebagainya.</li>
+	<li>Adapun makna مُنْكَرَاتِ الْأَعْمَلِ adalah segala perbuatan yang diingkari, baik oleh syariat mapun adat, meliputi dosa – dosa besar semisal membunuh, mencuri, berzina, minum – minuman keras dan lain – lain, atau terus menrus melakukan dosa kecil.</li>
+	<li>Maksud sabda beliau مُنْكَرَاتِ الْأَهْوَاءِ adalah syahwat yang membinasakan dan menghancurkan berupa melakukan berbagai kmekasiatan atau lebih mengutmakan perbuatan dosa dan kemaksiatan.</li>
+	<li>Adapun yang dimaksudمُنْكَرَات الْأَدْوَاءِ  adalah berbagai macam penyakit, baik yang bersarang di badan manusia seperti lepra, kusta, belang, TBC, dan sebagainya. Atau penyakit yang bersarang di dalam hati manusia berupa syahwat (perbuatan maksiat) atau syubhat seperti perbuatan bid’ah.</li>
 </ul>
 <h3>Faedah:</h3>
 <ul type="1">
@@ -74,12 +74,12 @@
 </ul>
 <h3>Bibliography</h3>
 <p>
-[1] Sanad hadits ini dinyatakan shahih sebagaimana yang disyaratkan oleh Imam Muslim walaupun tidak dikeluarkan oleh al-Bukhari dan Muslim. Demikian menurut penjelasan al-Hakim dalam <i>al-Mustadrak</i> 1/714.
-[2] <i>Taudhihul Ahkam</i> 7/437, <i>at-Taisir bi Syarhil Jami’ish Shagir</i> 1/209 <i>Tahfatul Ahwadzi</i> 8/488.
+[1] Sanad hadits ini dinyatakan shahih sebagaimana yang disyaratkan oleh Imam Muslim walaupun tidak dikeluarkan oleh al-Bukhari dan Muslim. Demikian menurut penjelasan al-Hakim dalam <i>al-Mustadrak</i> 1/714.<br>
+[2] <i>Taudhihul Ahkam</i> 7/437, <i>at-Taisir bi Syarhil Jami’ish Shagir</i> 1/209 <i>Tahfatul Ahwadzi</i> 8/488.<br>
 [3] <i>Usdul ghobah</i> 4: 432 no. 4298
 </p>
 <h3>Catatan Penulis</h3>
-<p>Akhlak, begitu juga Adab itu penting, keduanya itu didahulukan diatas ilmu. Tanda – tanda akhlak yang baik Imam Ahmad berkata “Segala puncaknya ilmu itu adalah merasa takut kepada Allah” [diambil dari catatan kajian Ust. Ulum tentang Thalabul ‘Ilmi – Ahad, Maret 16, 2013, Masjid Pamenang]</p>
+<p>Akhlak, begitu juga Adab itu penting, keduanya itu didahulukan diatas ilmu. Tanda – tanda akhlak yang baik Imam Ahmad berkata “Segala puncaknya ilmu itu adalah merasa takut kepada Allah” [<i>diambil dari catatan kajian Ust. Ulum tentang Thalabul ‘Ilmi – Ahad, Maret 16, 2013, Masjid Pamenang</i>]</p>
 <h3>Sumber</h3>
 <p>Majalah Al-Mawadah, Dzulqa’dah 1435 H Vol. 77 hlm. 16, oleh Ust. Abu Ilyas Zaenal Musthofa.</p>
 </div>
