--- a/tugas/tugas-managemen-files/index.html
+++ b/tugas/tugas-managemen-files/index.html
@@ -63,16 +63,16 @@
   <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder</i> computer secara <i>default</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li>
   <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder libraries</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li><br>
   <li>Jalankan dan amati aplikasi <i>windows  eksplorer</i> yang akan menampilkan direktori atau <li>folder profile</li> pengguna yang sedang <li>logon</li>. Catat hasilnya apa saja yang ditampilkan.</li>
-  <li>Aturlah  tata  letak  data  pada  <li>windows  explorer</li>  dengan  mengklik <li>icon change  your  view</li>  yang  terdapat  pada  kanan  atas  jendela  <li>windows eksplorer </li><img src="/img/2014/10/details.jpg" alt="View Details">. Atur berbagai <li>view</li> yang ada, amati perubahannnya  dan catat hasilnya.</li>
-  <li>Atur  <li>view</li>  pada  details  kemudian  urutkan  tampilan  data  pada <li>windows ekplorer</li>  berdasarkan  kategori:  nama  <li>file</li>  dan  <li>date  modified</li>. Amati perubahan untuk kedua kategori tersebut dan catat hasilnya.</li>
-  <li>Atur <li>view</li> dengan details pada <li>windows eksplorer</li>, kemudian seleksi data yang  ditampilkan  berdasarkan  ukuran  <li>file</li>-nya  (Size)  yaitu  : <li>tiny, small, medium, large dan huge</li>. Amati perubahannya dan catat hasilnya.</li>
-  <li>Dengan  menggunakan  operasi-operasi  direktori  atau  <li>folder</li>  lakukan operasi,  membuat  <li>folder</li>,  mengganti  nama  <li>folder</li>,  manambahkan  ke <li>shortcut</li>, melihat data atau <li>properties folder</li>, menampilkan h<li>idden file</li> dan <li>sharing folder</li>.</li>
+  <li>Aturlah  tata  letak  data  pada  <i>windows  explorer</i>  dengan  mengklik <i>icon change  your  view</i>  yang  terdapat  pada  kanan  atas  jendela  <i>windows eksplorer </i><img src="/img/2014/10/details.jpg" alt="View Details">. Atur berbagai <i>view</i> yang ada, amati perubahannnya  dan catat hasilnya.</li>
+  <li>Atur  <i>view</i>  pada  details  kemudian  urutkan  tampilan  data  pada <i>windows ekplorer</i>  berdasarkan  kategori:  nama  <i>file</i>  dan  <i>date  modified</i>. Amati perubahan untuk kedua kategori tersebut dan catat hasilnya.</li>
+  <li>Atur <i>view</i> dengan details pada <i>windows eksplorer</i>, kemudian seleksi data yang  ditampilkan  berdasarkan  ukuran  <i>file</i>-nya  (Size)  yaitu  : <i>tiny, small, medium, large dan huge</i>. Amati perubahannya dan catat hasilnya.</li>
+  <li>Dengan  menggunakan  operasi-operasi  direktori  atau  <i>folder</i>  lakukan operasi,  membuat  <i>folder</i>,  mengganti  nama  <i>folder</i>,  manambahkan  ke <i>shortcut</i>, melihat data atau <i>properties folder</i>, menampilkan <i>hidden file</i> dan <i>sharing folder</i>.</li>
 </ul>
 <h3>Perintah </h3>
 <ul>
    <li>Dengan merujuk uraian materi dan praktikum, analisalah hasil praktikum menggunakan  analisa  diskriptif.  Tuliskan  kesimpulan  dari  hasil analisa tersebut. Selanjutnya buatlah laporan praktikum.</li>
-   <li>Sebutkan  dan  Jelaskan  pengertian  <li>file</li>  dan  operasi-operasi  yang    dapat dilakukan untuk mengelola <li>file</li> ?</li>
-   <li>Sebutkan  dan  Jelaskan  pengertian  direktori  atau  <li>folder</li>  dan   operasi-operasi yang dapat dilakukan untuk mengelola <li>folder</li> ?</li>
+   <li>Sebutkan  dan  Jelaskan  pengertian  <i>file</i>  dan  operasi-operasi  yang    dapat dilakukan untuk mengelola <i>file</i> ?</li>
+   <li>Sebutkan  dan  Jelaskan  pengertian  direktori  atau  <i>folder</i>  dan   operasi-operasi yang dapat dilakukan untuk mengelola <i>folder</i> ?</li>
 </ul>
 
 <p>Jika kalian ingin bertanya, saya <a
