--- a/tugas/tugas-managemen-files/index.html
+++ b/tugas/tugas-managemen-files/index.html
@@ -53,7 +53,7 @@
 
 <h3>Petunjuk</h3>
 <ul>
-  <li>-	Sumber Bacaan file <code>.pptx</code> yang telah di catat atau di copy, dan Buku <code>5-C2-Sistem Operasi-X-1.pdf</code> yang telah di copy-kan atau kalau belum punya silahkan mengcopy ke <b>pak. Saiful</b>.</li>
+  <li>Sumber Bacaan file <code>.pptx</code> yang telah di catat atau di copy, dan Buku <code>5-C2-Sistem Operasi-X-1.pdf</code> yang telah di copy-kan atau kalau belum punya silahkan mengcopy ke <b>pak. Saiful</b>.</li>
   <li>Tugas Kelompok, dengan jumlah anggota empat – lima anak.</li>
   <li>Buat laporan dari tugas kalian kemudian dikumpulkan dalam format word.</li>
   <li>File dikirim ke email <b>saifulindo@guruku.my.id</b>, paling lambat tanggal : Oct 12, 2014.</li>
@@ -63,7 +63,7 @@
   <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder</i> computer secara <i>default</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li>
   <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder libraries</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li><br>
   <li>Jalankan dan amati aplikasi <i>windows  eksplorer</i> yang akan menampilkan direktori atau <li>folder profile</li> pengguna yang sedang <li>logon</li>. Catat hasilnya apa saja yang ditampilkan.</li>
-  <li>Aturlah  tata  letak  data  pada  <i>windows  explorer</i>  dengan  mengklik <i>icon change  your  view</i>  yang  terdapat  pada  kanan  atas  jendela  <i>windows eksplorer </i><img src="/img/2014/10/details.jpg" alt="View Details">. Atur berbagai <i>view</i> yang ada, amati perubahannnya  dan catat hasilnya.</li>
+  <li>Aturlah  tata  letak  data  pada  <i>windows  explorer</i>  dengan  mengklik <i>icon change  your  view</i>  yang  terdapat  pada  kanan  atas  jendela  <i>windows eksplorer </i><img src="/img/2014/10/details.png" alt="View Details">. Atur berbagai <i>view</i> yang ada, amati perubahannnya  dan catat hasilnya.</li>
   <li>Atur  <i>view</i>  pada  details  kemudian  urutkan  tampilan  data  pada <i>windows ekplorer</i>  berdasarkan  kategori:  nama  <i>file</i>  dan  <i>date  modified</i>. Amati perubahan untuk kedua kategori tersebut dan catat hasilnya.</li>
   <li>Atur <i>view</i> dengan details pada <i>windows eksplorer</i>, kemudian seleksi data yang  ditampilkan  berdasarkan  ukuran  <i>file</i>-nya  (Size)  yaitu  : <i>tiny, small, medium, large dan huge</i>. Amati perubahannya dan catat hasilnya.</li>
   <li>Dengan  menggunakan  operasi-operasi  direktori  atau  <i>folder</i>  lakukan operasi,  membuat  <i>folder</i>,  mengganti  nama  <i>folder</i>,  manambahkan  ke <i>shortcut</i>, melihat data atau <i>properties folder</i>, menampilkan <i>hidden file</i> dan <i>sharing folder</i>.</li>
