fixed post tugas managemend files-nd

--- a/tugas/tugas-managemen-files/index.html
+++ b/tugas/tugas-managemen-files/index.html
@@ -61,8 +61,8 @@
 <h3>Panduan</h3>
 <ul>
   <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder</i> computer secara <i>default</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li>
-  <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder libraries</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li><br>
-  <li>Jalankan dan amati aplikasi <i>windows  eksplorer</i> yang akan menampilkan direktori atau <li>folder profile</li> pengguna yang sedang <li>logon</li>. Catat hasilnya apa saja yang ditampilkan.</li>
+  <li>Jalankan  dan  amati  aplikasi  <i>windows  eksplorer</i> yang  akan menampilkan direktori atau <i>folder libraries</i> terpilih pada <i>navigation pane</i>. Catat hasilnya apa saja yang ditampilkan.</li>
+  <li>Jalankan dan amati aplikasi <i>windows  eksplorer</i> yang akan menampilkan direktori atau <li>folder profile</li> pengguna yang sedang <i>logon</i>. Catat hasilnya apa saja yang ditampilkan.</li>
   <li>Aturlah  tata  letak  data  pada  <i>windows  explorer</i>  dengan  mengklik <i>icon change  your  view</i>  yang  terdapat  pada  kanan  atas  jendela  <i>windows eksplorer </i><img src="/img/2014/10/details.png" style="text-align" alt="View Details">. Atur berbagai <i>view</i> yang ada, amati perubahannnya  dan catat hasilnya.</li>
   <li>Atur  <i>view</i>  pada  details  kemudian  urutkan  tampilan  data  pada <i>windows ekplorer</i>  berdasarkan  kategori:  nama  <i>file</i>  dan  <i>date  modified</i>. Amati perubahan untuk kedua kategori tersebut dan catat hasilnya.</li>
   <li>Atur <i>view</i> dengan details pada <i>windows eksplorer</i>, kemudian seleksi data yang  ditampilkan  berdasarkan  ukuran  <i>file</i>-nya  (Size)  yaitu  : <i>tiny, small, medium, large dan huge</i>. Amati perubahannya dan catat hasilnya.</li>
