--- a/salaf/agar-terhindar-dari-jeleknya-akhlak/index.html
+++ b/salaf/agar-terhindar-dari-jeleknya-akhlak/index.html
@@ -65,14 +65,14 @@
 	<li>Maksud sabda beliau مُنْكَرَاتِ الْأَهْوَاءِ adalah syahwat yang membinasakan dan menghancurkan berupa melakukan berbagai kmekasiatan atau lebih mengutmakan perbuatan dosa dan kemaksiatan.</li>
 	<li>Adapun yang dimaksudمُنْكَرَات الْأَدْوَاءِ  adalah berbagai macam penyakit, baik yang bersarang di badan manusia seperti lepra, kusta, belang, TBC, dan sebagainya. Atau penyakit yang bersarang di dalam hati manusia berupa syahwat (perbuatan maksiat) atau syubhat seperti perbuatan bid’ah.</li>
 </ul>
-<h3>Faedah:</h3>
+<h3><span id="faedah">Faedah</span>:</h3>
 <ul type="1">
 	<li>Hadits yang agung ini bersumber dari sahabat Quthbah bin Malik radhiyallahu ’anhu dari bani Tsa’labah bin Sa’d bin Dibyan. Beliau termasuk penduduk kota Kufah, beliau adalah paman dari Ziyad bin ‘Ilaqah.[3]</li>
 	<li>Doa ini merupakan doa agung lagi muli yang pernah dipanjatkan oleh seorang berbudi perketi yang luhur laksana al-Qur’an yang berjalan dimuka bumi, Rasulullah Shallallahu ‘alaihi wa sallam. Hal ini sebagai bentuk kasih saying beliau terhadap umatnya. Sehingga mengajari umatnya agar terhindar dari perangai buruk dan marbahaya dunia yang bisa membawa petaka di akhirat.</li>
 	<li>Apabila seorang muslim tidak memiliki sifat atau akhlak yang tercela tersebut lantas menghiasi dirinya dengan akhlak yang terpuji baik secara syariat maupun akal sehat semisal lemah lembut, pemaat, dermawan, sabar, penyayang dan semisalnya, maka telah sempurna akhlaknya. Dengan berhias menggunakan tempat hati manusia dan kedudukan yang tinggi dalam surge Allah subhanahu wa ta’ala yang kekal abadi.</li>
 	<li>Akhlak yang terpuji akan tumbuh dari hati yang sehat, sebagaimana akhlak yang tercela terlahir dari hati yang sakit. Semoga Allah senantiasa menjaga hati kita dari segala kotoran dan penyakit yang bisa mnjerumuskan pelakuknya ke jurang nestapa.</li>
 </ul>
-<h3>Bibliography</h3>
+<h3><span id="bibliography">Bibliography</span></h3>
 <p>
 [1] Sanad hadits ini dinyatakan shahih sebagaimana yang disyaratkan oleh Imam Muslim walaupun tidak dikeluarkan oleh al-Bukhari dan Muslim. Demikian menurut penjelasan al-Hakim dalam <i>al-Mustadrak</i> 1/714.<br>
 [2] <i>Taudhihul Ahkam</i> 7/437, <i>at-Taisir bi Syarhil Jami’ish Shagir</i> 1/209 <i>Tahfatul Ahwadzi</i> 8/488.<br>
